fixed 'jumping' when switching F <-> C

--- a/public/main.css
+++ b/public/main.css
@@ -74,7 +74,7 @@
   .forecast__details {
     color: #df9980;
     font-size: 14px;
-    max-width: 140px; }
+    width: 140px; }
 
 .forecastMain {
   margin-bottom: 15px;
@@ -92,17 +92,16 @@
     font-size: 90px; }
 
 .dayTimeForecast {
-  line-height: 24px; }
-  .dayTimeForecast__temperature {
-    float: right;
-    margin-left: 30px; }
+  line-height: 24px;
+  display: flex;
+  justify-content: space-between; }
 
-@media (min-width: 350px) and (max-width: 489px) {
+@media (min-width: 350px) and (max-width: 629px) {
   .forecast {
     flex-direction: row;
     align-items: center; } }
 
-@media (min-width: 490px) {
+@media (min-width: 630px) {
   .forecast {
     flex-direction: row;
     align-items: center; }
@@ -110,7 +109,9 @@
     font-size: 20px; }
   .forecastTemperature {
     display: flex;
-    align-items: center; }
+    align-items: center;
+    justify-content: space-between;
+    width: 360px; }
     .forecastTemperature__value {
       margin-right: 26px; }
     .forecastTemperature__icon {
